--- a/TMS_task_management_system/MainWindow.xaml
+++ b/TMS_task_management_system/MainWindow.xaml
@@ -32,6 +32,14 @@
                         </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
+                <ListBox.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Копировать"></MenuItem>
+                        <MenuItem Header="Вставить"></MenuItem>
+                        <MenuItem Header="Вырезать"></MenuItem>
+                        <MenuItem Header="Удалить"></MenuItem>
+                    </ContextMenu>
+                </ListBox.ContextMenu>
             </ListBox>
             
             <GridSplitter Grid.Column="1" ShowsPreview="False" Width="3"
